# rachel

./: rachel.cabal
Rachel/: Compilation.hs  Doc.hs  Evaluation.hs  Inference.hs  Parser.hs  Primitive.hs  TH.hs  Transformation.hs  Types.hs
compiler/: Main.hs
interpreter/: Main.hs
res/: prelude.rach
