name:                rachel
version:             0.1.0.0
synopsis:            Rachel music functional programming language.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          dhelta.diaz@gmail.com
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules: Rachel.Inference
                 , Rachel.Evaluation
                 , Rachel.Types
                 , Rachel.Primitive
                 , Rachel.Doc
                 , Rachel.Parser
                 , Rachel.Compilation
                 , Rachel.Transformation
  other-modules:   Rachel.TH
  build-depends: base == 4.*
               , wavy
               , containers
               , transformers
               , template-haskell
               , haskell-src-exts
               , parsec
               , directory
  default-language: Haskell2010
  ghc-options: -Wall

executable racheli
  hs-source-dirs: interpreter
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base == 4.*
               , transformers
               , containers
               , rachel
               , parsec
               , haskeline

executable rachelc
  hs-source-dirs: compiler
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base == 4.*
               , transformers
               , containers
               , rachel
               , wavy
